--- a/css/main.css
+++ b/css/main.css
@@ -1262,7 +1262,7 @@ header .header-logo a {
   border: none;
   width: 57px;
   height: 57px;
-  background: url("../images/fablab/logo-white.png") no-repeat center;
+  background: url("../images/logo-white.png") no-repeat center;
   background-size: 57px 57px;
   font: 0/0 a;
   text-shadow: none;
