--- a/css/main.css
+++ b/css/main.css
@@ -1262,8 +1262,8 @@ header .header-logo a {
   border: none;
   width: 80px;
   height: 80px;
-  background: url("../images/logox.png") no-repeat center;
-  background-size: 57px 57px;
+  background: url("../images/logo.png") no-repeat center;
+  background-size: 80px 80px;
   font: 0/0 a;
   text-shadow: none;
   color: transparent;
