--- a/css/main.css
+++ b/css/main.css
@@ -1917,6 +1917,8 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.85) 0%, transparent 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9000000', endColorstr='#00000000',GradientType=0 );
 }
+
+
 #services .section-intro h3 {
   color: rgba(242, 242, 242, 0.5);
 }
@@ -1929,6 +1931,10 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 #services .services-content {
   text-align: center;
   max-width: 1040px;
+}
+
+#services span{
+  color: rgba(256, 256, 256, 0.9);
 }
 #services .services-list {
   margin-top: 1.2rem;
